compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__reserved_word_argument.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 254
expression: "pub fn main(with) {\n  with\n}\n"
---
----- SOURCE CODE
pub fn main(with) {
  with
}


----- COMPILED JAVASCRIPT
export function main(with$) {
  return with$;
}
