compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__reserved_word_in_function_arguments.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 285
expression: "pub fn main(arguments, eval) {\n  #(arguments, eval)\n}\n"
---
----- SOURCE CODE
pub fn main(arguments, eval) {
  #(arguments, eval)
}


----- COMPILED JAVASCRIPT
export function main(arguments$, eval$) {
  return [arguments$, eval$];
}
