compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__tail_call.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 106
expression: "\npub fn count(xs, n) {\n  case xs {\n    [] -> n\n    [_, ..xs] -> count(xs, n + 1)\n  }\n}\n"
---
----- SOURCE CODE

pub fn count(xs, n) {
  case xs {
    [] -> n
    [_, ..xs] -> count(xs, n + 1)
  }
}


----- COMPILED JAVASCRIPT
export function count(loop$xs, loop$n) {
  while (true) {
    let xs = loop$xs;
    let n = loop$n;
    if (xs.hasLength(0)) {
      return n;
    } else {
      let xs$1 = xs.tail;
      loop$xs = xs$1;
      loop$n = n + 1;
    }
  }
}
