compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__variable_rewriting_in_anon_fn_with_matching_parameter_in_case.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn bad() {\n  fn(state) {\n    let state = case Nil {\n      _ -> state\n    }\n    state\n  }\n}\n"
---
export function bad() {
  return (state) => {
    let state$1 = (() => {
      let $ = undefined;
      {
        return state;
      }
    })();
    return state$1;
  };
}
